Text truncation fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,10 +11,13 @@ html, body, #root {
 body {
   background: #181818;
   color: #fafafa;
+  overflow: hidden;
+  margin: 0;
 }
 
 .masthead-container {
   min-width: 320px;
+  position: relative;
 }
 
 .masthead-container, .masthead-tile, .masthead-header, .masthead-items {
@@ -30,7 +33,13 @@ body {
 .masthead-items {
   display: flex;
   width: 100%;
-  padding: 5vw;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background: black;
 }
 
 .logo {
@@ -45,26 +54,27 @@ body {
 }
 
 .masthead-tile {
-  flex-direction: column;
-  width: 33vw;
-  height: 33vw;
-  min-width: 150px;
-  min-height: 150px;
-  max-height: 300px;
-  max-width: 300px;
-  background: rgba(255, 255, 255, 0.05);
+  justify-content: center;
   color: #fafafa;
   border: 0;
-  font-size: 24px;
+  background: green;
+  font-size: 18px;
   margin: 10px;
-  padding: 20px;
+  padding: 10px;
   transition: 0.3s all ease-in-out;
   overflow: hidden;
+  text-decoration: none;
 }
 
 .masthead-tile:hover {
   background: rgba(255, 255, 255, 0.1);
   cursor: pointer;
+}
+
+.tile-wrap {
+  flex-direction: column;
+  display: flex;
+  width: 100%;
 }
 
 .icon {
@@ -76,5 +86,64 @@ body {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  max-width: calc(100% - 10px);
+  display: block;
+  max-width: 100%;
+}
+
+.masthead-enter {
+  transform: translate3d(100%, 0, 0px);
+  opacity: 0;
+}
+
+.masthead-enter.masthead-enter-active {
+  transform: translate3d(0%, 0, 0px);
+  opacity: 1;
+  transition: transform 300ms ease-out, opacity 300ms ease-out;
+}
+
+.masthead-exit {
+  transform: translate3d(0%, 0, 0px);
+  opacity: 1;
+}
+
+.masthead-exit.masthead-exit-active {
+  transform: translate3d(100%, 0, 0px);
+  opacity: 0;
+  transition: transform 300ms ease-in, opacity 300ms ease-in;
+}
+
+.menu-title {
+  position: absolute;
+  top: 0;
+  z-index: 99;
+}
+
+.children-1 .masthead-tile {
+  width: 100vw;
+  height: calc(100vw - 20px);
+}
+
+.children-2 .masthead-tile {
+  width: 50vw;
+  height: calc(50vw - 20px);
+}
+
+.children-3 .masthead-tile {
+  width: 33.333333333vw;
+  height: calc(33.333333333vw - 20px);
+}
+
+.children-4 .masthead-tile {
+  width: 25vw;
+  height: calc(25vw - 20px);
+}
+
+.children-5 .masthead-tile {
+  width: 20vw;
+  height: calc(20vw - 20px);
+}
+
+.children-6 .masthead-tile {
+  width: 16.6666666666vw;
+  height: calc(16.6666666666vw - 20px);
 }
